test for fixing bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -396,8 +396,8 @@ main {
   #search-container {
     flex-direction: column;
     align-items: center;
-    margin-left: -3rem;
-    margin-right: -3rem;
+    /*margin-left: -3rem;
+    margin-right: -3rem;*/
     padding-left: var(--spacing-base);
     padding-right: var(--spacing-base);
   }
@@ -949,4 +949,10 @@ footer a:hover {
     max-width: 100%;
     border-radius: 8px 8px 0 0;
   }
+}
+
+
+html,
+body {
+  overflow-x: hidden;
 }
